--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,3 +48,15 @@ nav ul li a {
   color: white;
   text-decoration: none;
 }
+
+input:invalid {
+  border: 2px dashed red;
+}
+
+/* input:invalid:required {
+  background-image: linear-gradient(to right, pink, lightgreen);
+} */
+
+input:valid {
+  border: 2px solid black;
+}
